@startuml Calculator

skinparam classAttributeIconSize 0
skinparam classFontSize 13
skinparam shadowing false

skinparam class {
    BackgroundColor<<Aggregate Root>> #E3F2FD
    BorderColor<<Aggregate Root>> #1565C0
    FontColor<<Aggregate Root>> #1565C0
    HeaderBackgroundColor<<Aggregate Root>> #BBDEFB

    BackgroundColor<<Entity>> #FFF8E1
    BorderColor<<Entity>> #F57F17
    FontColor<<Entity>> #F57F17
    HeaderBackgroundColor<<Entity>> #FFE082

    BackgroundColor<<Value Object>> #F1F8E9
    BorderColor<<Value Object>> #558B2F
    FontColor<<Value Object>> #558B2F
    HeaderBackgroundColor<<Value Object>> #DCEDC8
}

skinparam package {
    BackgroundColor #FAFAFA
    BorderColor #BDBDBD
    BorderStyle dashed
    FontSize 14
}


skinparam ArrowColor #444441

package "Calculator" <<Frame>>{

        class Calculator <<Aggregate Root>>{

            - id : CalculatorID
            - calculations : ArrayList<Calculation>
            - currentInput : Double
            - pendingOperator : OperatorType

        }

        class Calculation <<Value Object>>{

            - operator : OperatorType
            - numberOne : Double
            - numberTwo : Double
            - result : Double

        }

        enum OperatorType <<Value Object>>{
            +
            -
            /
            *
        }

        class Result <<Value Object>>{

            - result : Double

        }

        enum ResultStatus <<Value Object>>{
            SUCCESS
            ERR
        }

ResultStatus --> Result
Result --* Calculation
OperatorType --* Calculation
Calculation --* Calculator

}



@enduml